# gc_machine

./: Cargo.toml  LICENSE  README.md  instructions.txt
benches/: bench.rs  bench_example.rs  bench_utils.rs  mod.rs
circuit_macro/: Cargo.toml
circuit_macro/src/: lib.rs
src/: circuit_builder.rs  config.rs  crypto_utils.rs  garbler.rs  gates.rs  global_mem_alloc.rs  lib.rs  main.rs  oldgates.rs  peer.rs  websocket.rs  websocket_2.rs
src/evaluator/: evaluator.rs  free_xor_evaluator.rs  grr3_evaluator.rs  half_gates_evaluator.rs  mod.rs  original_evaluator.rs  point_and_permute_evaluator.rs
src/gates/: free_xor_gate_gen.rs  free_xor_gates.rs  gate_gen.rs  gates.rs  grr3_gate_gen.rs  grr3_gates.rs  half_gates_gate_gen.rs  half_gates_gates.rs  mod.rs  original_gate_gen.rs  original_gates.rs  point_and_permute_gate_gen.rs  point_and_permute_gates.rs
src/ot/: eg_elliptic.rs  eg_finite_field.rs  mod.rs  ot.rs  ot_elliptic.rs
src/unit_tests/: circuit_builder_tests.rs  crypto_utils_test.rs  evaluator_test.rs  garbler_test.rs  gates_test.rs  mod.rs  ot_test.rs  peer_test.rs  websocket_test.rs  wires_test.rs
src/wires/: free_xor_wire_gen.rs  free_xor_wires.rs  grr3_wire_gen.rs  grr3_wires.rs  half_gates_wire_gen.rs  half_gates_wires.rs  mod.rs  original_wire_gen.rs  original_wires.rs  point_and_permute_wire_gen.rs  point_and_permute_wires.rs  wire_gen.rs  wires.rs
tests/: README.md  circuit_macro_test.rs  integration.rs
