[package]
name = "gc_machine"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-channel = "0.3.32"
futures-util = "0.3.32"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
rand_chacha = "0.10.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
criterion = "0.3"
stats_alloc = "0.1.10"
glass_pumpkin = "1.10.0"
uuid = {version = "1.21.0", features= ["v4"]}
rustls = "0.23.37"

[[bench]]
name = "bench"
harness = false

glass_pumpkin = "1.0"
